<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
    <artifactId>svn-revision-number-maven-plugin</artifactId>
    <version>1.13</version>
    <packaging>maven-plugin</packaging>

    <name>Maven SVN Revision Number Plugin</name>
    <description>
        This plugin retrieves the revision number and the status of the Subversion working copy directory.
    </description>
    <url>http://code.google.com/p/maven-svn-revision-number-plugin</url>

    <inceptionYear>2009</inceptionYear>

    <organization>
        <name>Oleg Estekhin</name>
    </organization>

    <licenses>
        <license>
            <name>The BSD 2-Clause License</name>
            <url>${basedir}/license.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>oleg.estekhin</id>
            <name>Oleg Estekhin</name>
            <email>oleg.estekhin@gmail.com</email>
        </developer>
    </developers>

    <mailingLists>
        <mailingList>
            <name>Mailing List</name>
            <subscribe>maven-svn-revision-number-plugin+subscribe@googlegroups.com</subscribe>
            <unsubscribe>maven-svn-revision-number-plugin+unsubscribe@googlegroups.com</unsubscribe>
            <post>maven-svn-revision-number-plugin@googlegroups.com</post>
            <archive>http://groups.google.com/group/maven-svn-revision-number-plugin</archive>
        </mailingList>
    </mailingLists>

    <prerequisites>
        <maven>2.2.1</maven>
    </prerequisites>

    <scm>
        <connection>scm:svn:http://maven-svn-revision-number-plugin.googlecode.com/svn/tags/svn-revision-number-maven-plugin-1.13</connection>
        <developerConnection>scm:svn:https://maven-svn-revision-number-plugin.googlecode.com/svn/tags/svn-revision-number-maven-plugin-1.13</developerConnection>
        <url>http://code.google.com/p/maven-svn-revision-number-plugin/source/browse/tags/svn-revision-number-maven-plugin-1.13</url>
    </scm>

    <issueManagement>
        <system>Google Code</system>
        <url>http://code.google.com/p/maven-svn-revision-number-plugin/issues/list</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>oss.sonatype.org</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>oss.sonatype.org</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <site>
            <id>local</id>
            <url>file://${basedir}/target/site-deploy</url>
        </site>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-project</artifactId>
            <version>2.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.tmatesoft.svnkit</groupId>
            <artifactId>svnkit</artifactId>
            <version>1.7.5</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.5</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <releaseProfiles>check-artifacts,sign-artifacts</releaseProfiles>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <quiet>true</quiet>
                    <notimestamp>true</notimestamp>
                    <tagletArtifacts>
                        <tagletArtifact>
                            <groupId>org.apache.maven.plugin-tools</groupId>
                            <artifactId>maven-plugin-tools-javadoc</artifactId>
                            <version>3.1</version>
                        </tagletArtifact>
                    </tagletArtifacts>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.3</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-plugin-plugin</artifactId>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <configuration>
                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                            </configuration>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>summary</report>
                                        <report>license</report>
                                        <report>project-team</report>
                                        <report>mailing-list</report>
                                        <report>scm</report>
                                        <report>issue-tracking</report>
                                        <report>dependencies</report>
                                        <report>plugins</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <configuration>
                                <quiet>true</quiet>
                                <notimestamp>true</notimestamp>
                                <tagletArtifacts>
                                    <tagletArtifact>
                                        <groupId>org.apache.maven.plugin-tools</groupId>
                                        <artifactId>maven-plugin-tools-javadoc</artifactId>
                                        <version>3.1</version>
                                    </tagletArtifact>
                                </tagletArtifacts>
                            </configuration>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>javadoc</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>jxr</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </plugin>
                    </reportPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>integration-tests</id>
            <!--
            use -XX:MaxPermSize=256m if getting failures related to Groovy+PermGen
            -->
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-invoker-plugin</artifactId>
                        <version>1.6</version>
                        <dependencies>
                            <dependency>
                                <groupId>org.codehaus.groovy</groupId>
                                <artifactId>groovy</artifactId>
                                <version>2.0.0</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <projectsDirectory>src/it</projectsDirectory>
                            <pomIncludes>
                                <pomInclude>*/pom.xml</pomInclude>
                            </pomIncludes>
                            <pomExcludes>
                                <pomExclude>parallel/pom.xml</pomExclude>
                            </pomExcludes>
                            <preBuildHookScript>setup</preBuildHookScript>
                            <postBuildHookScript>verify</postBuildHookScript>
                            <addTestClassPath>true</addTestClassPath>
                            <settingsFile>src/it/settings.xml</settingsFile>
                            <cloneProjectsTo>target/it</cloneProjectsTo>
                            <localRepositoryPath>target/it-repository</localRepositoryPath>
                            <showErrors>true</showErrors>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>install</goal>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>check-artifacts</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>animal-sniffer-maven-plugin</artifactId>
                        <version>1.8</version>
                        <configuration>
                            <signature>
                                <groupId>org.codehaus.mojo.signature</groupId>
                                <artifactId>java15</artifactId>
                                <version>1.0</version>
                            </signature>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign-artifacts</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.4</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
